--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <title>Recreating Flexbox Design</title>
     <link rel="stylesheet" href="index.css" />
 </head>
-<body><header>
+<body>
+   <header>
     <div class="link">
-      <div class="flex"><a href="#">Grid</a></div>
-      <div class="grid"><a href="index.html">Flex</a></div>
-    </div>
-  </header>
+        <div class="flex"><li><a href="grid.html">Grid</a></li></div>
+        <div class="grid"><li><a href="#">Flex</a></li></div>
+      </div>
+    </header>
     <main>
         <div class="card-container">
             <div class="cards">
